# pearcore

./: .gitignore  CNAME  README.md  beast-tutorial.md  embed.md  index.html  manual.md  package-lock.json  package.json  peartree.bundle.min.js  tutorial.md
.github/workflows/: deploy-pages.yml  release.yml
data/: just_outbreak.beast.mcc.tree  lhfv_background.iqtree.tree  lhvf_metadata.csv  not_a.tree  tree.nwk
demo/: demo.html  package.json
demo/js/: demo.js
docs/: nexus_matacomments.md  peartree.bundle.min.js  tutorial.md
peartree/: about.md  demo_embed.html  demo_iframe.html  embed.md  help.md  index.html  package.json  peartree-tauri.html  peartree.html
peartree-app/: about.md  peartree.html
peartree/css/: peartree-embed.css  peartree-webapp.css  peartree.css
peartree/data/: VARV.tree
peartree/js/: annotations-manager.js  annotationsio.js  annotcurator.js  axisrenderer.js  commands.js  config.js  datatablerenderer.js  export-controller.js  filter-control.js  filter-manager.js  graphicsio.js  legendrenderer.js  peartree-commands.js  peartree-embed.js  peartree-tauri.js  peartree-ui.js  peartree.bundle.js  peartree.js  phylograph.js  themes.js  (+5 more)
scripts/: build-bundle.mjs  bundle-styles-demo.css  bundle-styles-peartree.css  bundle-styles.css  set-version.js  stage-tauri.sh
sealion/: sealion.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tests/: DatesForRDPisolates.txt  DatesForRDPisolates_wmetadata_TreeTime.txt  timetree.nexus
ui/: help.md  peartree.html
(+22 files in other folders)
